# FLACJACKet

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  build.sh  clean_autogen.sh  configure.ac
src/: flacjacket.c  flacjacket_globals.h  flacjacket_params.h  http_sends.c  http_sends.h  logging.c  logging.h  sddp_sends.c  sddp_sends.h  server.c  server.h
